<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/history_list_row_date"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:text="@string/nichiji" />

    <TextView
        android:id="@+id/history_list_row_addr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/history_list_row_alert_flg"
        android:text="@string/addr" />

    <TextView
        android:id="@+id/history_list_row_alert_flg"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/alertFlg"
        android:textColor="@color/alert" />

</RelativeLayout>