<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/button_message"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <!--
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_untenButton"
        android:layout_alignLeft="@+id/main_untenButton"
        android:layout_marginLeft="30dp"
        android:orientation="vertical" >
    -->
    <ImageView
        android:id="@+id/barcode_iv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_drive"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/caspits_logo" />


    <ImageButton
        android:id="@+id/main_drive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/barcode_iv_result"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/button_drive"
        android:src="@drawable/bt_drive" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/barcode_iv_result"
        android:layout_below="@+id/main_drive"
        android:text="@string/button_drive" />

    <TextView
        android:id="@+id/barcode_tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_drive"
        android:layout_marginRight="14dp"
        android:layout_toLeftOf="@+id/main_setupButton"
        android:text="@string/button_history" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/main_message"
        android:layout_below="@+id/main_message"
        android:text="@string/button_message" />

    <ImageButton
        android:id="@+id/main_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_drive"
        android:layout_below="@+id/TextView01"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/button_message"
        android:src="@drawable/bt_message" />

    <Button
        android:id="@+id/main_setupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/button_setup" />

    <ImageButton
        android:id="@+id/main_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/main_drive"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/main_drive"
        android:contentDescription="@string/button_history"
        android:src="@drawable/bt_history" />

</RelativeLayout>